@@ -97,21 +97,29 @@ def init_encoders(app: FastFlixApp, **_):
     ]
 
     if app.fastflix.config.qsvencc:
-        encoders.insert(1, qsvencc_plugin)
-        encoders.insert(encoders.index(av1_plugin), qsvencc_av1_plugin)
-        encoders.insert(encoders.index(avc_plugin), qsvencc_avc_plugin)
+        if "H.265/HEVC" in app.fastflix.config.qsvencc_encoders:
+            encoders.insert(1, qsvencc_plugin)
+        if "AV1" in app.fastflix.config.qsvencc_encoders:
+            encoders.insert(encoders.index(av1_plugin), qsvencc_av1_plugin)
+        if "H.264/AVC" in app.fastflix.config.qsvencc_encoders:
+            encoders.insert(encoders.index(avc_plugin), qsvencc_avc_plugin)
 
     if app.fastflix.config.nvencc:
-        encoders.insert(1, nvencc_plugin)
-        encoders.insert(encoders.index(av1_plugin), nvencc_av1_plugin)
-        encoders.insert(encoders.index(avc_plugin), nvencc_avc_plugin)
+        if "H.265/HEVC" in app.fastflix.config.nvencc_encoders:
+            encoders.insert(1, nvencc_plugin)
+        if "AV1" in app.fastflix.config.nvencc_encoders:
+            encoders.insert(encoders.index(av1_plugin), nvencc_av1_plugin)
+        if "H.264/AVC" in app.fastflix.config.nvencc_encoders:
+            encoders.insert(encoders.index(avc_plugin), nvencc_avc_plugin)
 
     if app.fastflix.config.vceencc:
-        if reusables.win_based:
+        if reusables.win_based and "H.265/HEVC" in app.fastflix.config.vceencc_encoders:
             # HEVC AMF support only works on windows currently
             encoders.insert(1, vceencc_hevc_plugin)
-        encoders.insert(encoders.index(av1_plugin), vceencc_av1_plugin)
-        encoders.insert(encoders.index(avc_plugin), vceencc_avc_plugin)
+        if "AV1" in app.fastflix.config.vceencc_encoders:
+            encoders.insert(encoders.index(av1_plugin), vceencc_av1_plugin)
+        if "H.264/AVC" in app.fastflix.config.vceencc_encoders:
+            encoders.insert(encoders.index(avc_plugin), vceencc_avc_plugin)
 
     app.fastflix.encoders = {
         encoder.name: encoder
@@ -125,21 +133,6 @@ def init_fastflix_directories(app: FastFlixApp):
     app.fastflix.log_path.mkdir(parents=True, exist_ok=True)
 
 
-def register_app():
-    """
-    On Windows you have to set the AppUser Model ID or else the
-    taskbar icon will not appear as expected.
-    """
-    if reusables.win_based:
-        try:
-            import ctypes
-
-            app_id = f"cdgriffith.fastflix.{__version__}".encode("utf-8")
-            ctypes.windll.shell32.SetCurrentProcessExplicitAppUserModelID(app_id)
-        except Exception:
-            logger.exception("Could not set application ID for Windows, please raise issue in github with above error")
-
-
 def start_app(worker_queue, status_queue, log_queue, queue_list, queue_lock, portable_mode=False, enable_scaling=True):
     app = create_app(enable_scaling=enable_scaling)
     app.fastflix = FastFlix(queue=queue_list, queue_lock=queue_lock)
@@ -150,7 +143,6 @@ def start_app(worker_queue, status_queue, log_queue, queue_list, queue_lock, por
     app.fastflix.config = Config()
     init_fastflix_directories(app)
     init_logging(app)
-    register_app()
     upgraded = app.fastflix.config.upgrade_check()
     if upgraded:
         # No translation will be possible in this case
