@@ -8479,3 +8479,9 @@ Loading Videos:
   pol: Ładowanie filmów
   ukr: Завантаження відео
   kor: 동영상 로드 중
+Open FastFlix:
+  eng: Open FastFlix
+Minimize to Tray:
+  eng: Minimize to Tray
+Device:
+  eng: Device
