@@ -88,8 +88,8 @@ def build(fastflix: FastFlix):
     if settings.profile and settings.profile != "default":
         beginning += f"-profile:v {settings.profile} "
 
-    if settings.gop_size:
-        beginning += f"-g {settings.gop_size}"
+    # if settings.gop_size:
+    #     beginning += f"-g {settings.gop_size}"
 
     x265_params = settings.x265_params.copy() or []
 
