@@ -116,6 +116,8 @@ def build(fastflix: FastFlix):
 
     command = [
         f'"{clean_file_string(fastflix.config.nvencc)}"',
+        "--device",
+        str(settings.device),
         "-i",
         f'"{clean_file_string(video.source)}"',
         (f"--video-streamid {stream_id}" if stream_id else ""),
