@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-from dataclasses import dataclass, field
+from dataclasses import dataclass, field, asdict
 from subprocess import run, PIPE
 
 
@@ -11,19 +11,22 @@ class Encoder:
     formats: list[str] = field(default_factory=list)
 
 
+@dataclass
 class VCEEncoder(Encoder):
     name = "VCE"
 
 
+@dataclass
 class NVENCEncoder(Encoder):
     name = "NVENC"
 
 
+@dataclass
 class QSVEncoder(Encoder):
     name = "QSV"
 
 
-def parse_vce_devices(split_text: list[str]):
+def parse_vce_devices(split_text: list[str]) -> VCEEncoder:
     encoder = VCEEncoder()
 
     for line in split_text:
@@ -39,7 +42,7 @@ def parse_vce_devices(split_text: list[str]):
     return encoder
 
 
-def parse_nvenc_devices(split_text: list[str]):
+def parse_nvenc_devices(split_text: list[str]) -> NVENCEncoder:
     encoder = NVENCEncoder()
 
     for line in split_text:
@@ -53,7 +56,7 @@ def parse_nvenc_devices(split_text: list[str]):
     return encoder
 
 
-def parse_qsv_devices(split_text: list[str]):
+def parse_qsv_devices(split_text: list[str]) -> QSVEncoder:
     encoder = QSVEncoder()
 
     for line in split_text:
@@ -66,9 +69,9 @@ def parse_qsv_devices(split_text: list[str]):
     return encoder
 
 
-def run_check_features(executable, encoder="UNSET"):
+def run_check_features(executable, is_qsv=False):
     outputs = []
-    if encoder == "qsv":
+    if is_qsv:
         result = run([executable, "--check-features"], stdout=PIPE, stderr=PIPE, encoding="utf-8")
         outputs.append(result.stdout.splitlines())
     else:
@@ -79,3 +82,24 @@ def run_check_features(executable, encoder="UNSET"):
             outputs.append(result.stdout.splitlines())
 
     return outputs
+
+
+def get_all_encoder_formats_and_devices(executable, is_qsv=False, is_nvenc=True, is_vce=False) -> (dict, list[str]):
+    devices = {}
+    encoders = set()
+    for output in run_check_features(executable=executable, is_qsv=is_qsv):
+        if is_vce:
+            data = parse_vce_devices(output)
+            encoders.update(data.formats)
+        elif is_nvenc:
+            data = parse_nvenc_devices(output)
+            encoders.update(data.formats)
+        elif is_qsv:
+            data = parse_qsv_devices(output)
+            data.formats = [x.split(" ")[0] for x in data.formats]
+            encoders.update(data.formats)
+        else:
+            raise Exception("Must set at least one encoder type")
+        devices[data.device_number] = {"name": data.device_name, "encoders": data.formats}
+
+    return devices, list(encoders)
